@@ -18,3 +18,7 @@ repos:
     rev: v1.0.1
     hooks:
       - id: rst-linter
+  - repo: https://github.com/Lucas-C/pre-commit-hooks-bandit
+    rev: v1.0.5
+    hooks:
+      - id: python-bandit-vulnerability-check
